--- a/README
+++ b/README
@@ -6,22 +6,34 @@ languages, and it can automatically detect the source language
 as you type.
 
 Runtime requirements:
-  cygwin-1.5.18-1
-  eel2-2.12.2-1
-  libaspell15-0.50.3-1
-  libtranslate-0.99-1
+  cygwin-1.5.25-15
+  eel2-2.22.2-1
+  GConf2-2.22.0-1
+  gdk-pixbuf2-2.12.11-1
+  glib2-2.16.5-1
+  gnome-vfs2-2.22.0-1
+  gtk2-x11-2.12.11-1
+  libaspell15-0.60.5-1
+  libglade2-2.6.3-1
+  libgnome2-2.22.0-1
+  libgnomeui2-2.22.1-1
+  libintl8-0.15-1
+  libpopt0-1.14-1
+  libtranslate-0.99-3
+  libxml2-2.6.32-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.18-1
-  autoconf2.5-2.59-3
-  automake1.9-1.9.6-1
-  binutils-20050610-1
-  gawk-3.1.5-1
-  gcc-core-3.4.4-1
-  intltool-0.33-1
+  autoconf2.5-2.61-1
+  automake1.9-1.9.6-2
+  binutils-20080624-2
+  gawk-3.1.6-1
+  gcc-core-3.4.4-3
+  gnome-common-2.20.0-2
+  intltool-0.40.3-1
   make-3.80-1
-  pkgconfig-0.17.2-2
+  pkg-config-0.23a-2
+  rarian-0.8.0-1
   sed-4.1.4-1
 
 Canonical website:
@@ -37,7 +49,7 @@ Build instructions:
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  ./gnome-translate-0.99-X.sh all
+  cygport ./gnome-translate-0.99-X.cygport all
 
 This will create:
   /usr/src/gnome-translate-0.99-X-src.tar.bz2
@@ -52,7 +64,6 @@ Files included in the binary package:
   /etc/preremove/gnome-translate.sh
   /usr/bin/gnome-translate.exe
   /usr/share/applications/gnome-translate.desktop
-  /usr/share/doc/Cygwin/gnome-translate-0.99.README
   /usr/share/doc/gnome-translate-0.99/AUTHORS
   /usr/share/doc/gnome-translate-0.99/COPYING
   /usr/share/doc/gnome-translate-0.99/INSTALL
@@ -87,6 +98,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 0.99-2 -----
+Rebuilt with cygport.
 
 ----- version 0.99-1 -----
 Initial release for Cygwin.
