--- a/README
+++ b/README
@@ -6,35 +6,36 @@ languages, and it can automatically detect the source language
 as you type.
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  eel2-2.22.2-1
-  GConf2-2.22.0-1
-  gdk-pixbuf2-2.12.11-1
-  glib2-2.16.5-1
-  gnome-vfs2-2.22.0-1
-  gtk2-x11-2.12.11-1
+  cygwin-1.7.0-61
   libaspell15-0.60.5-1
-  libglade2-2.6.3-1
-  libgnome2-2.22.0-1
-  libgnomeui2-2.22.1-1
-  libintl8-0.15-1
-  libpopt0-1.14-1
-  libtranslate-0.99-3
-  libxml2-2.6.32-1
+  libeel2_2-2.26.0-1
+  libgcc1-4.3.2-2
+  libgconf2_4-2.26.2-1
+  libgdk_pixbuf2.0_0-2.16.5-1
+  libglade2.0_0-2.6.4-1
+  libglib2.0_0-2.20.4-1
+  libgnome2_0-2.26.0-1
+  libgnomeui2_0-2.24.1-1
+  libgnomevfs2_0-2.24.1-1
+  libgtk2.0_0-2.16.5-1
+  libintl8-0.17-11
+  libpopt0-1.6.4-4
+  libtranslate0-0.99-4
+  libxml2-2.7.3-11
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.61-1
-  automake1.9-1.9.6-2
-  binutils-20080624-2
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  gnome-common-2.20.0-2
-  intltool-0.40.3-1
-  make-3.80-1
-  pkg-config-0.23a-2
-  rarian-0.8.0-1
-  sed-4.1.4-1
+  autoconf2.5-2.63-10
+  automake1.9-1.9.6-10
+  binutils-2.19.51-1
+  gawk-3.1.7-1
+  gcc4-core-4.3.2-2
+  gnome-common-2.26.0-2
+  intltool-0.40.6-1
+  make-3.81-2
+  pkg-config-0.23b-10
+  rarian-0.8.1-11
+  sed-4.1.5-2
 
 Canonical website:
   http://www.nongnu.org/libtranslate/gnome-translate/
@@ -57,53 +58,10 @@ This will create:
 
 -------------------------------------------
 
-Files included in the binary package:
-
-  /etc/gconf/schemas/gnome-translate.schemas
-  /etc/postinstall/gnome-translate.sh
-  /etc/preremove/gnome-translate.sh
-  /usr/bin/gnome-translate.exe
-  /usr/share/applications/gnome-translate.desktop
-  /usr/share/doc/gnome-translate-0.99/AUTHORS
-  /usr/share/doc/gnome-translate-0.99/COPYING
-  /usr/share/doc/gnome-translate-0.99/INSTALL
-  /usr/share/doc/gnome-translate-0.99/NEWS
-  /usr/share/doc/gnome-translate-0.99/README
-  /usr/share/doc/gnome-translate-0.99/TODO
-  /usr/share/gnome/help/gnome-translate/C/documentation-license.xml
-  /usr/share/gnome/help/gnome-translate/C/figures/main-window.png
-  /usr/share/gnome/help/gnome-translate/C/gnome-translate.xml
-  /usr/share/gnome/help/gnome-translate/C/software-license.xml
-  /usr/share/gnome-translate/ui/app.glade
-  /usr/share/gnome-translate/ui/edit-toolbars.glade
-  /usr/share/gnome-translate/ui/hand-open.png
-  /usr/share/gnome-translate/ui/logo.png
-  /usr/share/gnome-translate/ui/menus.xml
-  /usr/share/gnome-translate/ui/preferences.glade
-  /usr/share/gnome-translate/ui/toolbars.xml
-  /usr/share/gnome-translate/ui/translate-web-page.glade
-  /usr/share/icons/hicolor/16x16/apps/gnome-translate-web-page.png
-  /usr/share/icons/hicolor/16x16/apps/gnome-translate.png
-  /usr/share/icons/hicolor/24x24/apps/gnome-translate-web-page.png
-  /usr/share/icons/hicolor/24x24/apps/gnome-translate.png
-  /usr/share/icons/hicolor/32x32/apps/gnome-translate-swap-panes.png
-  /usr/share/icons/hicolor/32x32/apps/gnome-translate-web-page.png
-  /usr/share/icons/hicolor/32x32/apps/gnome-translate.png
-  /usr/share/icons/hicolor/48x48/apps/gnome-translate-web-page.png
-  /usr/share/icons/hicolor/48x48/apps/gnome-translate.png
-  /usr/share/locale/fr/LC_MESSAGES/gnome-translate.mo
-  /usr/share/omf/gnome-translate/gnome-translate-C.omf
-  /usr/share/pixmaps/gnome-translate.png
-
-------------------
-
 Port Notes:
 
------ version 0.99-2 -----
-Rebuilt with cygport.
-
------ version 0.99-1 -----
-Initial release for Cygwin.
+----- version 0.99-3 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
